[tool.poetry]
name = "biograph_explorer"
version = "0.1.0"
description = "Streamlit application for multi-gene TRAPI query integration with NetworkX clustering and LLM-assisted exploration using Cytoscape.js visualization"
authors = ["Natalie Gill"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
tct = "^0.1.4"
streamlit = "^1.50.0"
pydantic = "^2.11.9"
networkx = "^3.5"
pandas = "^2.2.1"
python-louvain = "^0.16"
streamlit-cytoscape = ">=0.1.1"
scipy = "^1.16.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
watchdog = "^6.0.0"
notebook = "^7.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
